--- a/AOP/AOP/AOP.csproj
+++ b/AOP/AOP/AOP.csproj
@@ -68,10 +68,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DiagnosticInterceptor.cs" />
-    <Compile Include="InterceptorTest.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Proxy.cs" />
+    <Compile Include="IAOPBase.cs" />
+    <Compile Include="AOPInstance.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
