--- a/AOP/AOP/App.config
+++ b/AOP/AOP/App.config
@@ -12,15 +12,15 @@
     <!-- section in the configuration file.-->
     <sectionExtension type="Microsoft.Practices.Unity.InterceptionExtension.Configuration.InterceptionConfigurationExtension, Microsoft.Practices.Unity.Interception.Configuration"/>
     <!-- Defines some aliast to easily manipulate the mappings -->
-    <alias alias="IProxy" type="AOP.IProxy, AOP"/>
-    <alias alias="Proxy" type="AOP.Proxy, AOP"/>
+    <alias alias="IAOPBase" type="AOP.IAOPBase, AOP"/>
+    <alias alias="AOPInstance" type="AOP.AOPInstance, AOP"/>
     <alias alias="DiagnosticInterceptor" type="AOP.DiagnosticInterceptor, AOP"/>
     <!-- Default Container when creating the tree-chain of resolution-->
     <container>
       <!-- Loading the section extension only enables the interception configuration to be given in the configuration file. -->
       <!-- Interception itself will not work unless you also load the interception container extension in your Unity container instance.-->
       <extension type="Interception"/>
-      <register type="IProxy" mapTo="Proxy">
+      <register type="IAOPBase" mapTo="AOPInstance">
         <lifetime type="ContainerControlledLifetimeManager"/>
         <interceptor type="InterfaceInterceptor"/>
         <interceptionBehavior type="DiagnosticInterceptor"/>
